@@ -1,12 +1,9 @@
 package org.fedoraproject.javadeptools.fma;
 
+import java.lang.foreign.Arena;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.ValueLayout;
 import java.lang.invoke.MethodHandle;
-import java.lang.invoke.MethodType;
-
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
 
 public class Mman extends CLibrary {
     private static class Lazy {
@@ -14,13 +11,12 @@ public class Mman extends CLibrary {
     }
 
     private final MethodHandle memfd_create = downcallHandle("memfd_create",
-            MethodType.methodType(int.class, MemoryAddress.class, int.class),
-            FunctionDescriptor.of(CLinker.C_INT, CLinker.C_POINTER, CLinker.C_INT));
+            FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
 
     public static final int memfd_create(String name, int flags) {
-        try (var nameScope = ResourceScope.newConfinedScope()) {
+        try (var nameArena = Arena.openConfined()) {
             return (int) Lazy.INSTANCE.memfd_create.invokeExact(
-                    CLibrary.toCStringAddress(name, nameScope), flags);
+                    CLibrary.toCString(name, nameArena), flags);
         } catch (Throwable thr) {
             throw new RuntimeException(thr);
         }
