@@ -1,13 +1,10 @@
 package org.fedoraproject.javadeptools.fma;
 
+import java.lang.foreign.Arena;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.ValueLayout;
 import java.lang.invoke.MethodHandle;
-import java.lang.invoke.MethodType;
-
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
 
 public class Unistd extends CLibrary {
     private static class Lazy {
@@ -18,15 +15,22 @@ public class Unistd extends CLibrary {
     public static final int SEEK_CUR = 1;
     public static final int SEEK_END = 2;
 
+    private final MethodHandle strlen = downcallHandle("strlen",
+            FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
     private final MethodHandle close = downcallHandle("close",
-            MethodType.methodType(int.class, int.class),
-            FunctionDescriptor.of(CLinker.C_INT, CLinker.C_INT));
+            FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
     private final MethodHandle lseek = downcallHandle("lseek",
-            MethodType.methodType(long.class, int.class, long.class, int.class),
-            FunctionDescriptor.of(CLinker.C_LONG_LONG, CLinker.C_INT, CLinker.C_LONG_LONG, CLinker.C_INT));
+            FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT, ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT));
     private final MethodHandle write = downcallHandle("write",
-            MethodType.methodType(long.class, int.class, MemoryAddress.class, long.class),
-            FunctionDescriptor.of(CLinker.C_LONG_LONG, CLinker.C_INT, CLinker.C_POINTER, CLinker.C_LONG_LONG));
+            FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
+
+    public static final long strlen(MemorySegment string) {
+        try {
+            return (long) Lazy.INSTANCE.close.invokeExact(string);
+        } catch (Throwable thr) {
+            throw new RuntimeException(thr);
+        }
+    }
 
     public static final long close(int fd) {
         try {
@@ -45,11 +49,11 @@ public class Unistd extends CLibrary {
     }
 
     public static final long write(int fd, byte[] bytes) {
-        try (var scope = ResourceScope.newConfinedScope()) {
-            var segment = MemorySegment.allocateNative(bytes.length, scope);
+        try (var arena = Arena.openConfined()) {
+            var segment = arena.allocate(bytes.length);
             var bbuf = segment.asByteBuffer();
             bbuf.put(bytes);
-            return (long) Lazy.INSTANCE.write.invokeExact(fd, segment.address(), segment.byteSize());
+            return (long) Lazy.INSTANCE.write.invokeExact(fd, segment, segment.byteSize());
         } catch (Throwable thr) {
             throw new RuntimeException(thr);
         }
